# prototype

./: .gitignore
language/cpp/algorithm/: main.cpp
language/cpp/atomicity/: CMakeLists.txt  foo.cpp
language/cpp/cache_test/: main.cpp
language/cpp/callable/: CMakeLists.txt  main.cpp
language/cpp/cmake_qt_vs/: CMakeLists.txt
language/cpp/compile/: CMakeLists.txt  main.cpp
language/cpp/default/: main.cpp
language/cpp/function/: main.cpp
language/cpp/inherit/: Makefile  main.cpp
language/cpp/inline/: CMakeLists.txt  file1.cpp  file1.h  main.cpp
language/cpp/line/: main.cpp
language/cpp/linking/: CMakeLists.txt  file1.cpp  file1.h  test.cpp
language/cpp/multiple_inheritance/: main.cpp
language/cpp/r_value/: main.cpp
language/cpp/read_set_application/: CMakeLists.txt  controller.cpp  controller.h  file_reader.cpp  file_reader.h  file_writer.cpp  file_writer.h  main.cpp  runner.cpp  runner.h
language/cpp/read_set_application/inc/io/: file.h
language/cpp/read_set_application/inc/utils/: path.h
language/cpp/read_set_application/src/io/: file.cpp
language/cpp/read_set_application/src/utils/: path.cpp
language/cpp/semaphore/: CMakeLists.txt  main.cpp
language/cpp/set_test/: main.cpp
language/cpp/shared_library/: Makefile  foo.cpp  main.cpp
language/cpp/simd/: main.cpp
language/cpp/simd_checker/: main.cpp
language/cpp/static_library/: Makefile  main.cpp
language/cpp/stream/: main.cpp
language/cpp/string/: main.cpp
language/cpp/string_sso/: main.cpp
language/cpp/string_utf/: Makefile  main.cpp
language/cpp/struct_test/: Makefile  main.c  main.cpp
language/cpp/threadpool/: CMakeLists.txt  controller.h  main.cpp  print.h  task.h  thread.h  thread_pool.cpp  thread_pool.h
language/cpp/tmp/: main.cpp
language/cpp/vector/: CMakeLists.txt  main.cpp  vector.cpp  vector.h
language/cpp/void_pointer/: main.cpp
language/cpp/void_unique_ptr/: CMakeLists.txt  main.cpp
language/shell/tohaeyoung/: question.sh
